--- a/app/components/Header/header.module.css
+++ b/app/components/Header/header.module.css
@@ -1,24 +1,34 @@
 .header {
-font-size: 24px;
+  font-size: 18px;
+}
+
+.logo {
+  font-size: 44px;
+  font-weight: 600;
 }
 
 .navbar {
-    display: flex;
+  display: flex;
   align-items: center;
   justify-content: space-between;
   height: 12vh;
 }
 
 .menu ul {
-    display: flex;
-    flex-direction: row;
-    text-decoration: none;
-    list-style-type: none;
-    gap: 24px;
-    color: gray;
-    cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  list-style-type: none;
+  gap: 34px;
+  color: rgb(43, 43, 43);
+  cursor: pointer;
 }
 
+.menu ul li:hover {
+  color: rgb(255, 204, 0);
+}
+
+
 .menu ul li:active {
-    color: orangered;
-  }
+  color: orangered;
+}
