--- a/app/components/Bottom/bottom.module.css
+++ b/app/components/Bottom/bottom.module.css
@@ -1,6 +1,6 @@
 .bottomArea {
     display: flex;
-    gap:9%;
+   
     padding-bottom: 5%;
   }
   
@@ -17,6 +17,11 @@
     font-size: 20px;
     font-weight: 900;
     color: gray;
+  }
+
+  .image {
+    width: 100%;
+    height: 100px;
   }
   
   .cardContent .cardTitle {
