--- a/app/components/Content/content.module.css
+++ b/app/components/Content/content.module.css
@@ -16,7 +16,7 @@
 
 .featuredContent h1 {
   
-  font-size: 44px;
+  font-size: 34px;
 }
 
 .featuredText {
@@ -52,6 +52,11 @@
   width: 70%;
 }
 
+.image {
+  width: 100%;
+  height: 40vh;
+}
+
 .newsItem:not(:last-child) {
   border-bottom: 1px solid gray;
   padding-bottom: 5%;
@@ -74,9 +79,3 @@
   cursor: pointer;
 }
 
-.newsArea p {
-  height: 90px;
-  font-size: 18px;
-  color: rgb(168, 168, 168);
-  overflow: hidden;
-}
