--- a/app/business/business.module.css
+++ b/app/business/business.module.css
@@ -1,16 +1,8 @@
 .main {
-  max-width: 1024px;
+  max-width: 70%;
   margin: auto;
-}
 
-.container {
-    
-    margin: auto;
-    max-width: 1024px;
-    gap: 24px;
-    padding-bottom: 8%;
   }
-  
   
   .featuredImage {
     padding-bottom: 24px;
@@ -22,7 +14,6 @@
   }
   
   .featuredContent h1 {
-    
     font-size: 34px;
   }
   
@@ -33,7 +24,6 @@
   }
   
   .featuredText p {
-    
     color: rgb(97, 97, 97);
     line-height: 1.5;
   }
@@ -53,37 +43,20 @@
     background-color: black;
   }
   
-  .newsArea {
-    background-color: black;
-    padding: 16px;
-    width: 70%;
-  }
-  
   .image {
     width: 100%;
-    height: 40vh;
+    height: 50vh;
   }
   
-  .newsItem:not(:last-child) {
-    border-bottom: 1px solid gray;
-    padding-bottom: 5%;
+  .bottomArea {
+    display: flex;
+    margin-top: 5%;
+    gap: 24px;
   }
   
-  .newsItem:not(:nth-child(2)) {
-    padding-top: 5%;
+  .cardTitle {
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 25px;
   }
-  
-  .newsArea h2 {
-    color: orange;
-    font-size: 34px;
-    padding-bottom: 5%;
-  }
-  
-  .newsArea h3 {
-    font-size: 20px;
-    color: white;
-    padding-bottom: 5%;
-    cursor: pointer;
-  }
-  
   
